package event;

public interface Subscriber {
    void update();
}
